Fixed spacing and styling on product cards

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -22,6 +22,7 @@ h1 {
   .product-card {
       padding: 30px;
       max-width: 300px;
+      height: 250px;
       margin: 20px;
       display: grid;
       justify-items: center;
@@ -30,9 +31,9 @@ h1 {
     }
   
     .prod-img {
-      max-height: 100%;
-      max-width: 80%;
+      max-height: 200px;
+      width: auto;
       border-radius: 5px;
       border: none;
-      box-shadow: lightgray 3px 3px 10px;
+      /* box-shadow: lightgray 3px 3px 10px; */
     }
